--- a/client/src/StyleSheet/SearchBar.css
+++ b/client/src/StyleSheet/SearchBar.css
@@ -48,6 +48,18 @@
 
   .filters {
     margin-left: 85px;
-    margin-top: 10px;
+    margin-top: 5px;
   }
+}
+
+.SearchBar__links {
+  display: flex;
+  margin-left: 100px;
+  margin-top: 10px;
+}
+
+.search__links {
+  text-decoration: none;
+  color: black;
+  margin-left: 10px;
 }
