--- a/client/src/StyleSheet/MainContent.css
+++ b/client/src/StyleSheet/MainContent.css
@@ -44,6 +44,10 @@ button:hover {
   text-decoration: none;
   color: black;
 }
+.Main__links > h4 {
+  font-weight: 500;
+  font-size: 20px;
+}
 
 .content__text {
   display: flex;
@@ -51,6 +55,8 @@ button:hover {
 }
 .content__text > h5 {
   width: 450px;
+  font-weight: 100;
+  font-size: 20px;
 }
 
 /* MOBILE VIEW */
@@ -69,9 +75,6 @@ button:hover {
     width: 350px;
     margin-top: 10px;
   }
-  .hideForMobile {
-    display: none;
-  }
 }
 
 @media only screen and (max-width: 400px) {
@@ -82,9 +85,6 @@ button:hover {
     display: block;
   }
   .content__text > h5 {
-    width: 400px;
-  }
-  .hideForMobile {
-    display: none;
+    width: 300px;
   }
 }
