--- a/client/src/StyleSheet/SearchBar.css
+++ b/client/src/StyleSheet/SearchBar.css
@@ -45,12 +45,58 @@
   .Search__field {
     display: flex;
     align-items: center;
-    margin-left: 90px;
+    margin-left: 15rem;
     height: 30px;
   }
   .filters {
     margin-top: 10px;
-    margin-left: 18px;
+    margin-left: -5px;
+  }
+
+  .Search__text > h4 {
+    font-weight: 900;
+    font-size: 20px;
+    margin-left: -90px;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .Search__field {
+    display: flex;
+    align-items: center;
+    margin-left: 200px;
+    height: 30px;
+  }
+  .filters {
+    margin-top: 10px;
+    margin-right: 95px;
+  }
+}
+@media only screen and (max-width: 660px) {
+  .Search__field {
+    display: flex;
+    align-items: center;
+    margin-left: 11rem;
+    height: 30px;
+  }
+  .filters {
+    margin-top: 10px;
+    margin-right: 95px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .Search__field {
+    display: flex;
+    align-items: center;
+    margin-left: 11rem;
+    height: 30px;
+  }
+
+  .Search__text {
+    margin-left: 70px;
+  }
+  .filters {
+    margin-top: 10px;
+    margin-right: 40px;
   }
 }
 
@@ -65,12 +111,12 @@
   }
 
   .filters {
-    margin-left: 85px;
+    margin-right: -100px;
     margin-top: 5px;
   }
   .Search__text > h4 {
     font-weight: 900;
     font-size: 20px;
-    margin-left: 3px;
+    margin-left: 40px;
   }
 }
