--- a/client/src/StyleSheet/Footer.css
+++ b/client/src/StyleSheet/Footer.css
@@ -7,9 +7,13 @@
 }
 
 .Footer__companyBrand {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 4px;
+}
+
+.Footer__licensing {
+  margin-bottom: 15px;
 }
 
 @media only screen and (max-width: 400px) {
@@ -19,6 +23,6 @@
     align-items: center;
     margin-top: 50px;
     background-color: #f5f5f5;
-    width: 448px;
+    width: 460px;
   }
 }
